backend1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
  namespace: 3-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1
          image: madhu092/backend1:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend1
  namespace: 3-tier
spec:
  selector:
    app: backend1
  ports:
    - port: 3000
      targetPort: 3000
