backend2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  namespace: 3-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2
          image: madhu092/backend2:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend2
  namespace: 3-tier
spec:
  selector:
    app: backend2
  ports:
    - port: 3001
      targetPort: 3001
