database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: 3-tier-db
  namespace: 3-tier
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: 3-tier-db
  template:
    metadata:
      labels:
        app: 3-tier-db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports: 
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: 3-tier
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: 3-tier-db
  type: ClusterIP
