ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: 3-tier
spec:
  ingressClassName: nginx
  rules:
    - host: madhu.blog.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: 3-tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: madhu.blog.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /backend1(/|$)(.*)
            backend:
              service:
                name: backend1
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /backend2(/|$)(.*)
            backend:
              service:
                name: backend2
                port:
                  number: 3001
